# gtsam_viz

./: .gitignore  CMakeLists.txt  README.md  build.sh
.cache/clangd/index/: Application.cpp.0D3CB30046905B50.idx  Application.h.47EFEDA26A10549F.idx  FactorGraphState.cpp.7AEECD3F85B71D42.idx  FactorGraphState.h.F9846481625365D8.idx  GVizProtocol.h.D86B8956C1B44EA3.idx  GVizServer.cpp.8A5499027BFF0A3B.idx  GVizServer.h.7B0CEDD231F151A1.idx  GraphBridge.cpp.847DA72A95A03EEF.idx  GraphBridge.h.FCB01C48C7A5E18C.idx  GraphLayout.cpp.DB0CA4995E6677BE.idx  GraphLayout.h.36BA53B60D796AC3.idx  GuiManager.h.E5ED84F44A697321.idx  LogPanel.h.E5CE04CF9CE19345.idx  OptimizerPanel.h.E39F2538BE8DC2BA.idx  Renderer3D.cpp.5E0C74103E5C972C.idx  Renderer3D.h.67E6A9C6EA224780.idx  Viewport3DPanel.cpp.2E5DE6B4A221BF21.idx  Viewport3DPanel.h.A23FCEBDAEA235C7.idx
.claude/: settings.json
cmake/: Dependencies.cmake
integration/: CMakeLists_snippet.cmake  GVizClient_Usage.md  graph.hpp  gviz_client.h  usage_example.cpp
src/: Application.cpp  Application.h  CMakeLists.txt  globals.cpp  globals.h  main.cpp
src/bridge/: GraphBridge.cpp  GraphBridge.h  README_Bridge.md
src/examples/: DemoScenarios.cpp  DemoScenarios.h  LiveBackendExample.cpp  LiveBackendExample.h
src/graph/: FactorGraphState.cpp  FactorGraphState.h  GraphLayout.cpp  GraphLayout.h  ResidualColorScale.h
src/gui/: GuiManager.cpp  GuiManager.h
src/gui/panels/: GraphViewPanel.cpp  GraphViewPanel.h  InspectorPanel.cpp  InspectorPanel.h  LogPanel.cpp  LogPanel.h  OptimizerPanel.cpp  OptimizerPanel.h  Viewport3DPanel.cpp  Viewport3DPanel.h
src/ipc/: GVizClient.h  GVizProtocol.h  GVizServer.cpp  GVizServer.h
src/renderer/: Renderer3D.cpp  Renderer3D.h
src/tests/: ResidualSmokeTest.cpp
